# Voice_Chatbot

./: .dockerignore  .gitignore  CODE_DEMO_GUIDE.md  CODE_OVERVIEW.md  DOCKER_DEPLOYMENT.md  Dockerfile  LLM_QUICK_SETUP.md  LLM_SETUP.md  MANIFEST.in  QUICK_DEMO_SCRIPT.md  README.md  SETUP_COMPLETE.md  VIDEO_PRESENTATION_NOTES.md  app.py  config.py  deploy.sh  docker-compose.yml  enable_llm.py  env_example.txt  main.py  nlp_engine.py  pyproject.toml  requirements.txt  setup.py  setup_llm.py  test_advanced_llm.py  test_new_features.py  test_setup.py
config/development/: env.production.txt  env_example.txt
deployment/docker/: Dockerfile  docker-compose.yml
docs/: PROJECT_WORKFLOW.docx  PROJECT_WORKFLOW.py  VIDEO_SCRIPT.docx  VIDEO_SCRIPT.py
docs/development/: PROJECT_STRUCTURE.md
screenshots/: PLACEHOLDER.md  README.md
scripts/: deploy.sh  nginx.conf
src/: __init__.py
src/voice_chatbot/: __init__.py
src/voice_chatbot/api/: __init__.py  routes.py
src/voice_chatbot/core/: __init__.py  app.py  config.py
src/voice_chatbot/models/: __init__.py
src/voice_chatbot/services/: __init__.py  langchain_agent.py  nlp_engine.py
src/voice_chatbot/utils/: __init__.py  image_preprocessing.py
static/css/: style.css
static/js/: app.js
templates/: index.html
tests/: test_app.py  test_llm_direct.py
web/static/css/: style.css
web/static/js/: app.js
web/templates/: index.html
