[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-voice-assistant-pro"
version = "1.0.0"
authors = [
    {name = "Faizan Arshad", email = "faizanarshad124@gmail.com"},
]
description = "Advanced AI-Powered Voice Assistant with Modern Web Interface"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Communications :: Chat",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
]
keywords = ["ai", "voice", "assistant", "chatbot", "nlp", "llm", "speech", "recognition"]
dependencies = [
    "flask>=2.3.3",
    "flask-cors>=4.0.0",
    "speechrecognition>=3.10.0",
    "pyttsx3>=2.90",
    "pyaudio>=0.2.11",
    "numpy<2.0.0",
    "scikit-learn>=1.3.0",
    "nltk>=3.8.1",
    "spacy>=3.6.0",
    "transformers>=4.33.2",
    "torch>=2.0.1",
    "openai>=0.28.1",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "websockets>=11.0.3",
    "aiohttp>=3.8.5",
    "gTTS>=2.5.4",
    "pygame>=2.6.1",
    "pyobjc-framework-Cocoa",
    "pyobjc-framework-Quartz",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.0",
    "black>=22.0",
    "flake8>=4.0",
    "mypy>=0.950",
    "pre-commit>=2.0",
]
docker = [
    "gunicorn>=20.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/Voice_Chatbot"
Documentation = "https://github.com/yourusername/Voice_Chatbot/blob/main/README.md"
Repository = "https://github.com/yourusername/Voice_Chatbot"
"Bug Tracker" = "https://github.com/yourusername/Voice_Chatbot/issues"

[project.scripts]
voice-assistant = "voice_chatbot.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
voice_chatbot = ["web/static/**/*", "web/templates/**/*"]

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=src/voice_chatbot --cov-report=html --cov-report=term-missing"

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "pyttsx3.*",
    "speech_recognition.*",
    "gtts.*",
    "pygame.*",
    "nltk.*",
    "spacy.*",
    "transformers.*",
    "torch.*",
    "openai.*",
    "requests.*",
    "websockets.*",
    "aiohttp.*",
    "sklearn.*",
]
ignore_missing_imports = true
